[package]
name = "juniper"
version = "0.15.6"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
    "Christian Legnitto <christian@legnitto.com>",
]
description = "GraphQL server library"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper"
repository = "https://github.com/graphql-rust/juniper"
readme = "../README.md"
keywords = ["graphql", "server", "web", "rocket"]
categories = ["web-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "graphql-rust/juniper" }

[features]
default = [
    "bson",
    "chrono",
    "schema-language",
    "url",
    "uuid",
]
expose-test-schema = ["anyhow", "serde_json"]
graphql-parser-integration = ["graphql-parser"]
scalar-naivetime = []
schema-language = ["graphql-parser-integration"]

[dependencies]
juniper_codegen = { version = "0.15.6", path = "../juniper_codegen"  }

anyhow = { version = "1.0.41", optional = true, default-features = false }
async-trait = "0.1.50"
bson = { version = "1.2.2", optional = true }
chrono = { version = "0.4.19", default-features = false, optional = true }
chrono-tz = { version = "0.5.3", default-features = false, optional = true }
fnv = "1.0.7"
futures = { version = "0.3.15", features = ["alloc"], default-features = false }
futures-enum = { version = "0.1.17", default-features = false }
graphql-parser = { version = "0.3.0", optional = true }
indexmap = { version = "1.6.2", features = ["serde-1"] }
serde = { version = "1.0.126", features = ["derive"], default-features = false }
serde_json = { version = "1.0.64", default-features = false, optional = true }
smartstring = "0.2.6"
static_assertions = "1.1.0"
url = { version = "2.2.2", optional = true }
uuid = { version = "0.8.2", default-features = false, optional = true }

[dev-dependencies]
bencher = "0.1.5"
pretty_assertions = "0.7.2"
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["macros", "rt-core", "time"] }

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"
