[package]
name = "juniper_actix"
version = "0.2.5"
edition = "2018"
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
description = "Juniper GraphQL integration with Actix"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_actix"
repository = "https://github.com/graphql-rust/juniper"

[features]
subscriptions = ["juniper_graphql_ws"]

[dependencies]
actix = "0.12.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"

juniper = { version = "0.15.6", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.2.5", path = "../juniper_graphql_ws", optional = true }

anyhow = "1.0.41"
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = { version = "1.7.1", features = ["time", "sync"] }

[dev-dependencies]
actix-rt = "2.2.0"
actix-cors = "0.5.4"
actix-identity = "0.3.1"

juniper = { version = "0.15.6", path = "../juniper", features = ["expose-test-schema"] }

bytes = "1.0.1"
env_logger = "0.8.4"
log = "0.4.14"
