[package]
name = "juniper_benchmarks"
version = "0.1.0"
edition = "2018"
authors = ["Christoph Herzog <chris@theduke.at>"]

[dependencies]
futures = "0.3.15"
juniper = { path = "../juniper" }

[dev-dependencies]
criterion = "0.3.4"
tokio = { version = "1.7.1", features = ["rt", "rt-multi-thread"] }

[[bench]]
name = "benchmark"
harness = false
