[package]
name = "juniper_codegen"
version = "0.15.2"
edition = "2018"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
]
description = "Internal custom derive trait for Juniper GraphQL"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper"
repository = "https://github.com/graphql-rust/juniper"

[badges]
travis-ci = { repository = "graphql-rust/juniper" }

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.27"
quote = "1.0.9"
syn = { version = "1.0.73", features = ["extra-traits", "full", "parsing"], default-features = false }

[dev-dependencies]
derive_more = "0.99.14"
futures = "0.3.15"
juniper = { version = "0.15.2", path = "../juniper" }
