[package]
name = "juniper_hyper"
version = "0.6.2"
edition = "2018"
authors = ["Damir Vandic <info@dvic.io>"]
description = "Juniper GraphQL integration with Hyper"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_hyper"
repository = "https://github.com/graphql-rust/juniper"

[dependencies]
futures = "0.3.15"
juniper = { version = "0.15.2", path = "../juniper", default-features = false }
hyper = { version = "0.14.9", features = ["server"] }
serde_json = "1.0.64"
tokio = "1.7.1"
url = "2.2.2"

[dev-dependencies]
juniper = { version = "0.15.2", path = "../juniper", features = ["expose-test-schema"] }
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.4", features = ["blocking", "rustls-tls"] }
tokio = { version = "1.7.1", features = ["macros"] }
