[package]
name = "juniper_iron"
version = "0.7.1"
edition = "2018"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
]
description = "Iron integration for juniper"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_iron"
repository = "https://github.com/graphql-rust/juniper"

[dependencies]
futures = "0.3.15"
juniper = { version = "0.15.2", path = "../juniper" }
iron = "0.6.1"
serde_json = "1.0.64"
urlencoded = "0.6.0"

[dev-dependencies]
juniper = { version = "0.15.2", path = "../juniper", features = ["expose-test-schema"] }
iron-test = "0.6.0"
logger = "0.4.0"
mount = "0.4.0"
percent-encoding = "2.1.0"
router = "0.6.0"
url = "2.2.2"
