[package]
name = "juniper_subscriptions"
version = "0.15.5"
edition = "2018"
authors = ["nWacky <gosha.evtushenko@gmail.com>"]
description = "Juniper SubscriptionCoordinator and SubscriptionConnection implementations"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_subscriptions"
repository = "https://github.com/graphql-rust/juniper"

[dependencies]
futures = "0.3.15"
juniper = { version = "0.15.6", path = "../juniper", default-features = false }

[dev-dependencies]
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["macros", "rt-core"] }
