[package]
name = "actix_subscriptions"
version = "0.1.0"
edition = "2018"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
publish = false

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
futures = "0.3.15"
tokio = { version = "1.7.1", features = ["macros", "rt"] }
env_logger = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
rand = "0.8.4"
tokio-stream = "0.1.6"

juniper = { path = "../../juniper", features = ["expose-test-schema"] }
juniper_actix = { path = "../../juniper_actix", features = ["subscriptions"] }
juniper_graphql_ws = { path = "../../juniper_graphql_ws" }
