[package]
name = "basic_subscriptions"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["rt", "rt-multi-thread", "macros"] }

juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_subscriptions = { git = "https://github.com/graphql-rust/juniper" }
