[package]
name = "warp_async"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Christoph Herzog <chris@theduke.at>"]

[dependencies]
juniper = { path = "../../juniper" }
juniper_warp = { path = "../../juniper_warp" }

env_logger = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
reqwest = { version = "0.11.4", features = ["rustls-tls"] }
tokio = { version = "1.7.1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.1"
