[package]
name = "warp_subscriptions"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
env_logger = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio-stream = "0.1.6"
tokio = { version = "1.7.1", features = ["rt", "rt-multi-thread", "macros"] }
warp = "0.3.1"

juniper = { path = "../../juniper" }
juniper_graphql_ws = { path = "../../juniper_graphql_ws" }
juniper_warp = { path = "../../juniper_warp", features = ["subscriptions"] }
