[package]
name = "juniper_tests"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
derive_more = "0.99.14"
futures = "0.3.15"
juniper = { path = "../../juniper" }
juniper_subscriptions = { path = "../../juniper_subscriptions" }

[dev-dependencies]
async-trait = "0.1.50"
serde_json = "1.0.64"
fnv = "1.0.7"
tokio = { version = "1.7.1", features = ["macros", "rt", "time"] }
